--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,17 @@ cffi==1.14.5
 click==7.1.2
 colorama==0.4.4
 fastapi==0.63.0
+greenlet==1.0.0
 h11==0.12.0
 loguru==0.5.3
-motor==2.3.1
 passlib==1.7.4
 pycparser==2.20
 pydantic==1.8.1
 PyJWT==2.0.1
-pymongo==3.11.3
 python-dotenv==0.15.0
-pytz==2021.1
 PyYAML==5.4.1
 six==1.15.0
+SQLAlchemy==1.4.1
 starlette==0.13.6
 typing-extensions==3.7.4.3
 uvicorn==0.13.4
